src/test/ui/alloc-error/alloc-error-handler-bad-signature-3.stderr
error: function should have one argument
  --> $DIR/alloc-error-handler-bad-signature-3.rs:10:1
   |
LL | fn oom() -> ! {
   | ^^^^^^^^^^^^^

error: aborting due to previous error

